# knowledge-database

./: .dockerignore  .env.example  .envrc  .gitignore  Dockerfile  Dockerfile.deploy  README.md  agent_rules.md  main.py  pyproject.toml
.agents/: AGENTS.md  citations.json  topic_map.json
docs/: ontology-frontmatter.md  ontology-relation-lifecycle.md  ontology-search-evaluation.md  search-quality-blind-evaluation.md
inbox/: .gitkeep
k8s/: configmap.yaml  deployment.yaml  indexing-cronjob.yaml  mcp-deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml.example  service.yaml
src/: agent_tool.py  config.py  database.py  image_pipeline.py  indexer.py  parser.py  searcher.py
tests/: direct_search_baseline.json  ontology_quality_cases.example.json  ontology_quality_development.json  ontology_quality_gates.json  search_quality_blind_answers.example.json  search_quality_blind_queries.example.json  search_quality_development.json  search_quality_gates.json  test_api_handlers.py  test_api_keys_web.py  test_architecture_boundaries.py  test_chunk_plan.py  test_commit_auto_indexing.py  test_database_migrations.py  test_db_backed_user_config.py  test_document_browser.py  test_document_expansion.py  test_document_expansion_executor.py  test_document_index_plan.py  test_file_indexing_executor.py  test_inbox.py  test_indexing_inventory.py  test_indexing_observer.py  test_indexing_plan.py  test_knowledge_baselines.py  test_knowledge_commit_integration.py  test_learning.py  test_learning_dashboard.py  test_live_search_excludes_baselines.py  test_mcp_tool_contract.py  (+12 more)
(+171 files in other folders)
