[project]
name = "knowledge-base"
version = "0.1.0"
description = "Obsidian + Agent based LLM-Wiki Knowledge Base"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg[binary]>=3.1.18",
    "psycopg-pool>=3.2.1",
    "pgvector>=0.2.5",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "openai>=1.40.0",
    "mcp>=0.1.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "uvicorn>=0.28.0",
    "pyjwt>=2.8.0",
    "cryptography>=42.0.0",
    "boto3>=1.34.0",
    "boto3-stubs~=1.43.45",
    "redis>=5.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-multipart>=0.0.20",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.1.1,<9",
]
